k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pet-health
  labels:
    name: pet-health
    app: pet-health-platform
